--- a/collections/ansible_collections/jaredhocutt/homelab/roles/bar_assistant/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/bar_assistant/tasks/main.yml
@@ -48,7 +48,7 @@
     data: "{{ item.value }}"
     state: present
   become: true
-  loop: "{{ bar_assistant_secrets_base | combine(bar_assistant_secrets, recursive=True) | dict2items }}"
+  loop: "{{ bar_assistant_secrets_combined | dict2items }}"
 
 - name: Create redis container
   containers.podman.podman_container:
