--- a/collections/ansible_collections/jaredhocutt/homelab/roles/homarr/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/homarr/tasks/main.yml
@@ -39,7 +39,7 @@
     state: present
   become: true
   no_log: true
-  loop: "{{ homarr_secrets_base | combine(homarr_secrets, recursive=True) | dict2items }}"
+  loop: "{{ homarr_secrets_combined | dict2items }}"
 
 - name: Create homarr container
   containers.podman.podman_container:
