--- a/collections/ansible_collections/jaredhocutt/homelab/roles/open_webui/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/open_webui/vars/main.yml
@@ -13,6 +13,10 @@ open_webui_env_vars_base: {}
 
 open_webui_secrets_base: {}
 
+open_webui_secrets_combined: >-
+  {{ open_webui_secrets_base
+  | combine(open_webui_secrets, recursive=True) }}
+
 open_webui_container_secrets_base: []
 
 ###############################################################################
