--- a/collections/ansible_collections/jaredhocutt/homelab/roles/paperless/tasks/destroy.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/paperless/tasks/destroy.yml
@@ -33,7 +33,7 @@
     state: absent
   become: true
   no_log: true
-  loop: "{{ paperless_secrets_base | combine(paperless_secrets, recursive=True) | dict2items }}"
+  loop: "{{ paperless_secrets_combined | dict2items }}"
 
 - name: Destroy volumes
   containers.podman.podman_volume:
