--- a/collections/ansible_collections/jaredhocutt/homelab/roles/portainer/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/portainer/vars/main.yml
@@ -13,6 +13,10 @@ portainer_env_vars_base: {}
 
 portainer_secrets_base: {}
 
+portainer_secrets_combined: >-
+  {{ portainer_secrets_base
+  | combine(portainer_secrets, recursive=True) }}
+
 portainer_container_secrets_base: []
 
 ###############################################################################
