--- a/collections/ansible_collections/jaredhocutt/homelab/roles/archiveium/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/archiveium/tasks/main.yml
@@ -56,7 +56,7 @@
     state: present
   become: true
   no_log: true
-  loop: "{{ archiveium_secrets_base | combine(archiveium_secrets, recursive=True) | dict2items }}"
+  loop: "{{ archiveium_secrets_combined | dict2items }}"
 
 - name: Reload systemd daemon
   ansible.builtin.systemd:
