--- a/collections/ansible_collections/jaredhocutt/homelab/roles/audiobookshelf/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/audiobookshelf/vars/main.yml
@@ -13,6 +13,10 @@ audiobookshelf_env_vars_base: {}
 
 audiobookshelf_secrets_base: {}
 
+audiobookshelf_secrets_combined: >-
+  {{ audiobookshelf_secrets_base
+  | combine(audiobookshelf_secrets, recursive=True) }}
+
 audiobookshelf_container_secrets_base: []
 
 ###############################################################################
