--- a/collections/ansible_collections/jaredhocutt/homelab/roles/authentik/tasks/destroy.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/authentik/tasks/destroy.yml
@@ -27,7 +27,7 @@
     state: absent
   become: true
   no_log: true
-  loop: "{{ authentik_secrets_base | combine(authentik_secrets, recursive=True) | dict2items }}"
+  loop: "{{ authentik_secrets_combined | dict2items }}"
 
 - name: Destroy volumes
   containers.podman.podman_volume:
