--- a/collections/ansible_collections/jaredhocutt/homelab/roles/authentik/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/authentik/tasks/main.yml
@@ -46,7 +46,7 @@
     data: "{{ item.value }}"
     state: present
   become: true
-  loop: "{{ authentik_secrets_base | combine(authentik_secrets, recursive=True) | dict2items }}"
+  loop: "{{ authentik_secrets_combined | dict2items }}"
 
 - name: Create postgres container
   containers.podman.podman_container:
