--- a/collections/ansible_collections/jaredhocutt/homelab/roles/bar_assistant/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/bar_assistant/vars/main.yml
@@ -31,6 +31,10 @@ bar_assistant_meilisearch_env_vars_base:
 bar_assistant_secrets_base:
   bar_assistant_meilisearch_master_key: "{{ bar_assistant_meilisearch_master_key }}"
 
+bar_assistant_secrets_combined: >-
+  {{ bar_assistant_secrets_base
+  | combine(bar_assistant_secrets, recursive=True) }}
+
 bar_assistant_container_secrets_base:
   - bar_assistant_meilisearch_master_key,type=env,target=MEILISEARCH_KEY
 
