--- a/collections/ansible_collections/jaredhocutt/homelab/roles/bentopdf/tasks/destroy.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/bentopdf/tasks/destroy.yml
@@ -23,7 +23,7 @@
     state: absent
   become: true
   no_log: true
-  loop: "{{ bentopdf_secrets_base | combine(bentopdf_secrets, recursive=True) | dict2items }}"
+  loop: "{{ bentopdf_secrets_combined | dict2items }}"
 
 - name: Destroy network
   containers.podman.podman_network:
