--- a/collections/ansible_collections/jaredhocutt/homelab/roles/changedetection/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/changedetection/tasks/main.yml
@@ -40,7 +40,7 @@
     data: "{{ item.value }}"
     state: present
   become: true
-  loop: "{{ changedetection_secrets_base | combine(changedetection_secrets, recursive=True) | dict2items }}"
+  loop: "{{ changedetection_secrets_combined | dict2items }}"
 
 - name: Create browser container
   containers.podman.podman_container:
