--- a/collections/ansible_collections/jaredhocutt/homelab/roles/kometa/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/kometa/tasks/main.yml
@@ -36,7 +36,7 @@
     data: "{{ item.value }}"
     state: present
   become: true
-  loop: "{{ kometa_secrets_base | combine(kometa_secrets, recursive=True) | dict2items }}"
+  loop: "{{ kometa_secrets_combined | dict2items }}"
 
 - name: Create kometa container
   containers.podman.podman_container:
