--- a/collections/ansible_collections/jaredhocutt/homelab/roles/overseerr/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/overseerr/tasks/main.yml
@@ -36,7 +36,7 @@
     data: "{{ item.value }}"
     state: present
   become: true
-  loop: "{{ overseerr_secrets_base | combine(overseerr_secrets, recursive=True) | dict2items }}"
+  loop: "{{ overseerr_secrets_combined | dict2items }}"
 
 - name: Create overseerr container
   containers.podman.podman_container:
