--- a/collections/ansible_collections/jaredhocutt/homelab/roles/paperless/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/paperless/tasks/main.yml
@@ -58,7 +58,7 @@
     data: "{{ item.value }}"
     state: present
   become: true
-  loop: "{{ paperless_secrets_base | combine(paperless_secrets, recursive=True) | dict2items }}"
+  loop: "{{ paperless_secrets_combined | dict2items }}"
 
 - name: Create postgres container
   containers.podman.podman_container:
