--- a/collections/ansible_collections/jaredhocutt/homelab/roles/portainer/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/portainer/tasks/main.yml
@@ -36,7 +36,7 @@
     data: "{{ item.value }}"
     state: present
   become: true
-  loop: "{{ portainer_secrets_base | combine(portainer_secrets, recursive=True) | dict2items }}"
+  loop: "{{ portainer_secrets_combined | dict2items }}"
 
 - name: Create portainer container
   containers.podman.podman_container:
