--- a/collections/ansible_collections/jaredhocutt/homelab/roles/sabnzbd/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/sabnzbd/tasks/main.yml
@@ -38,7 +38,7 @@
     data: "{{ item.value }}"
     state: present
   become: true
-  loop: "{{ sabnzbd_secrets_base | combine(sabnzbd_secrets, recursive=True) | dict2items }}"
+  loop: "{{ sabnzbd_secrets_combined | dict2items }}"
 
 - name: Create sabnzbd container
   containers.podman.podman_container:
