--- a/collections/ansible_collections/jaredhocutt/homelab/roles/sabnzbd/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/sabnzbd/vars/main.yml
@@ -13,6 +13,10 @@ sabnzbd_env_vars_base: {}
 
 sabnzbd_secrets_base: {}
 
+sabnzbd_secrets_combined: >-
+  {{ sabnzbd_secrets_base
+  | combine(sabnzbd_secrets, recursive=True) }}
+
 sabnzbd_container_secrets_base: []
 
 ###############################################################################
