--- a/collections/ansible_collections/jaredhocutt/homelab/roles/tautulli/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/tautulli/tasks/main.yml
@@ -36,7 +36,7 @@
     data: "{{ item.value }}"
     state: present
   become: true
-  loop: "{{ tautulli_secrets_base | combine(tautulli_secrets, recursive=True) | dict2items }}"
+  loop: "{{ tautulli_secrets_combined | dict2items }}"
 
 - name: Create tautulli container
   containers.podman.podman_container:
