--- a/collections/ansible_collections/jaredhocutt/homelab/roles/tautulli/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/tautulli/vars/main.yml
@@ -13,6 +13,10 @@ tautulli_env_vars_base: {}
 
 tautulli_secrets_base: {}
 
+tautulli_secrets_combined: >-
+  {{ tautulli_secrets_base
+  | combine(tautulli_secrets, recursive=True) }}
+
 tautulli_container_secrets_base: []
 
 ###############################################################################
