--- a/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/tasks/destroy.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/tasks/destroy.yml
@@ -23,7 +23,7 @@
     state: absent
   become: true
   no_log: true
-  loop: "{{ uptime_kuma_secrets_base | combine(uptime_kuma_secrets, recursive=True) | dict2items }}"
+  loop: "{{ uptime_kuma_secrets_combined | dict2items }}"
 
 - name: Destroy volumes
   containers.podman.podman_volume:
