--- a/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/tasks/main.yml
@@ -36,7 +36,7 @@
     data: "{{ item.value }}"
     state: present
   become: true
-  loop: "{{ uptime_kuma_secrets_base | combine(uptime_kuma_secrets, recursive=True) | dict2items }}"
+  loop: "{{ uptime_kuma_secrets_combined | dict2items }}"
 
 - name: Create uptime_kuma container
   containers.podman.podman_container:
