--- a/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/vars/main.yml
@@ -13,6 +13,10 @@ uptime_kuma_env_vars_base: {}
 
 uptime_kuma_secrets_base: {}
 
+uptime_kuma_secrets_combined: >-
+  {{ uptime_kuma_secrets_base
+  | combine(uptime_kuma_secrets, recursive=True) }}
+
 uptime_kuma_container_secrets_base: []
 
 ###############################################################################
