--- a/collections/ansible_collections/jaredhocutt/homelab/roles/warracker/tasks/destroy.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/warracker/tasks/destroy.yml
@@ -25,7 +25,7 @@
     state: absent
   become: true
   no_log: true
-  loop: "{{ warracker_secrets_base | combine(warracker_secrets, recursive=True) | dict2items }}"
+  loop: "{{ warracker_secrets_combined | dict2items }}"
 
 - name: Destroy volumes
   containers.podman.podman_volume:
