--- a/collections/ansible_collections/jaredhocutt/homelab/roles/warracker/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/warracker/tasks/main.yml
@@ -40,7 +40,7 @@
     data: "{{ item.value }}"
     state: present
   become: true
-  loop: "{{ warracker_secrets_base | combine(warracker_secrets, recursive=True) | dict2items }}"
+  loop: "{{ warracker_secrets_combined | dict2items }}"
 
 - name: Create postgres container
   containers.podman.podman_container:
