--- a/collections/ansible_collections/jaredhocutt/homelab/roles/wizarr/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/wizarr/tasks/main.yml
@@ -36,7 +36,7 @@
     data: "{{ item.value }}"
     state: present
   become: true
-  loop: "{{ wizarr_secrets_base | combine(wizarr_secrets, recursive=True) | dict2items }}"
+  loop: "{{ wizarr_secrets_combined | dict2items }}"
 
 - name: Create wizarr container
   containers.podman.podman_container:
